# ric-plt-dbaas

./: INFO.yaml  README-HA.md  README.md  container-tag.yaml  groups  project.config
.github/workflows/: gerrit-novote-merge.yaml
charts/dbaas-ha-service/: Chart.yaml  values.yaml
charts/dbaas-ha-service/templates/: NOTES.txt  _helpers.tpl  announce-service.yaml  configmap.yaml  healthchecks.yaml  service.yaml  statefulset.yaml
charts/dbaas-service/: Chart.yaml  values.yaml
charts/dbaas-service/templates/: deployment.yaml  service.yaml
charts/dbaas-test/: Chart.yaml  values.yaml
charts/dbaas-test/templates/: deployment.yaml
docker/: Dockerfile.redis  Dockerfile.redis-ha  Dockerfile.redis.arm64  Dockerfile.testapp
docs/: index.rst  overview.rst  release-notes.rst
redismodule/: Makefile.am  README.md  configure.ac  libredismodule.la  run-tests.sh.in
redismodule/include/: redismodule.h
redismodule/src/: exstrings.c
redismodule/tst/include/: ut_helpers.hpp
redismodule/tst/mock/include/: commonStub.h  exstringsStub.h  redismodule.h
redismodule/tst/mock/src/: commonStub.cpp  redismoduleNewStub.cpp  redismoduleStub.cpp
redismodule/tst/src/: exstrings_ndel_test.cpp  exstrings_nget_test.cpp  exstrings_test.cpp  main.cpp  ut_helpers.cpp
releases/: container-release-ric-plt-dbaas.yaml
testapplication/go/: testapp.go
testapplication/go/sdl/: sdl.go
